# pychatbot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  cli.py  compose.mysql.yml  compose.test.yml  conftest.py  containers.py  docker-compose.app.yml  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  schema_linebot.sql  schema_rs.sql  schema_verify.sql  wsgi.py
application/: GenAI_feedback_service.py  ask_TA_service.py  chatbot_logger.py  check_attendance_service.py  check_score_service.py  grader_client.py  leave_service.py  mail_carrier.py  registration_service.py  state_management_service.py  suggestion_service.py  user_state_accessor.py
config/: settings.py
domain/: course.py  event_log.py  feedback.py  leave_request.py  message_log.py  moodle_enrollment.py  policies.py  score.py  student.py  student_repository.py  summary_repositories.py  user_state.py  user_state_repository.py
features/: check_homework.feature  register.feature
infrastructure/: mysql_course_repository.py  mysql_event_log_repository.py  mysql_feedback_push_repository.py  mysql_feedback_repository.py  mysql_grading_log_repository.py  mysql_leave_repository.py  mysql_message_log_repository.py  mysql_student_repository.py  mysql_suggestion_query_repository.py  mysql_summary_repository.py  mysql_user_state_repository.py  postgresql_moodle_repository.py  postgresql_onlinejudge_repository.py
interface/: __init__.py  linebot.py
interfaces/: __init__.py  grade_batch_route.py  linebot.py  linebot_route.py  postback_parser.py  (+1 more)
(+77 files in other folders)
